[gd_scene load_steps=11 format=3 uid="uid://cwdaippcfuti3"]

[ext_resource type="Script" uid="uid://bh6invogafry5" path="res://Scripts/Player_Scripts/Player_Controller.gd" id="1_v0iea"]
[ext_resource type="Script" uid="uid://ci2i8yeyyc11s" path="res://Scripts/Player_Scripts/Player_States/Idle.gd" id="2_cvnsp"]
[ext_resource type="Script" uid="uid://cipx5w625gbnn" path="res://Scripts/Player_Scripts/Camera.gd" id="2_vgqql"]
[ext_resource type="Script" uid="uid://e4nidq1ik35l" path="res://Scripts/Player_Scripts/Player_States/Grounded_Movement.gd" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://cod6p2hcnbtjw" path="res://Scripts/Player_Scripts/Player_States/Air_Movement.gd" id="5_5ixxa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f60y1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5ixxa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5ixxa"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nn08x"]
material = SubResource("StandardMaterial3D_5ixxa")
size = Vector3(0.75, 0.1, 0.2)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5ixxa"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_v0iea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_f60y1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_5ixxa")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.523264, -0.409448)
mesh = SubResource("BoxMesh_nn08x")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
near = 0.4
script = ExtResource("2_vgqql")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2.5)

[node name="SpotLight3D" type="SpotLight3D" parent="Camera3D"]
light_energy = 5.0
spot_range = 30.0

[node name="Idle" type="Node" parent="."]
script = ExtResource("2_cvnsp")

[node name="Grounded_Movement" type="Node" parent="."]
script = ExtResource("3_6t5aa")

[node name="Air_Movement" type="Node" parent="."]
script = ExtResource("5_5ixxa")
metadata/_custom_type_script = "uid://n3c784rmkymc"

[node name="GroundDetection" type="RayCast3D" parent="."]
target_position = Vector3(0, -10, 0)
collision_mask = 5

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5ixxa")
